--- a/src/Website.css
+++ b/src/Website.css
@@ -1,6 +1,11 @@
+.body {
+  height: 100%;
+}
+
 .footer {
-  position: absolute;
-  bottom: 0px;
+  background: #ffffff;
+  position: fixed;
+  bottom: 0;
   width: 100%;
   text-align: center;
 }
