--- a/src/Website.css
+++ b/src/Website.css
@@ -10,22 +10,14 @@
   text-align: center;
 }
 
-a {
-  color: black;
+.first-line {
+  margin: 0.1em;
 }
 
-.horizontal-break {
-  display: block;
-  position: relative;
-  padding: 0;
-  margin: 8px auto;
-  height: 0;
-  width: 100%;
-  max-height: 0;
-  font-size: 1px;
-  line-height: 0;
-  clear: both;
-  border: none;
-  border-top: 1px solid #aaaaaa;
-  border-bottom: 1px solid #ffffff;
+.second-line {
+  margin-bottom: 0.5em;
+}
+
+a {
+  color: #000000A0;
 }
