--- a/src/Projects.css
+++ b/src/Projects.css
@@ -1,13 +1,14 @@
 .card {
   margin: 1em;
-  display: flex;
-  float: left;
-  max-width: 25%;
+  display: block;
+  margin-right: auto;
+  margin-left: auto;
+  width: 25%;
 }
 
 .card-collection {
   width: 100%;
-  margin-right: auto;
-  margin-left: auto;
+  display: flex;
+  float: left;
   margin-top: 5%; 
 }
