--- a/src/Website.css
+++ b/src/Website.css
@@ -1,13 +1,15 @@
-.body {
-  height: 100%;
-}
-
-.footer {
-  background: #ffffff;
-  position: fixed;
-  bottom: 0;
-  width: 100%;
-  text-align: center;
+@media (min-width: 1080px) {
+  .body {
+    height: 100%;
+  }
+  
+  .footer {
+    background: #ffffff;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    text-align: center;
+  }  
 }
 
 .first-line {
@@ -20,4 +22,20 @@
 
 a {
   color: #000000A0;
+}
+
+@media (max-width: 1079px) {
+  .body {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+  }
+  
+  .footer {
+    background: #ffffff;
+    flex-shrink: 0;
+    width: 100%;
+    text-align: center;
+  }
+  
 }
